# contact_manager

./: Justfile  docker-compose.dev.yaml
client/: Cargo.toml  index.html  index.scss
client/src/: lib.rs  lib.scss
client/src/components/: mod.scss
client/src/components/atoms/: button.rs  button.scss  dropdown.rs  dropdown.scss  mod.rs
client/src/components/molecules/: auth_profile.rs  auth_profile.scss  mod.rs  mod.scss
client/src/components/organisms/: navbar.rs  navbar.scss
client/src/idx_store/: mod.rs
client/src/keycloak/: binding.rs  mod.rs
common/: Cargo.toml
common/src/: jsonrpc.rs
server/: Cargo.toml
server/src/: keycloak.rs  main.rs  state.rs
