[package]
name = "contact_manager_client"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.51"
log = "0.4.14"
serde = "1.0.126"
urlencoding = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.51", features = ["Window", "Document", "Location", "Storage"] }
wee_alloc = "0.4.5"
yew = "0.18.0"
yewtil = "0.4.0"
