[package]
name = "common"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"
crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
tide = "0.16.0"
uuid = "0.8.2"
